syntax = "proto3";

package pb;

option go_package = "readly/pb";

import "book.proto";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "rpc_delete_book.proto";
import "rpc_register_book.proto";

service BookService {
  rpc RegisterBook(RegisterBookRequest) returns (Book) {
    option (google.api.http) = {
      post: "/v1/books"
      body: "*"
    };
  }

  rpc DeleteBook(DeleteBookRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/books/{book_id}"
    };
  }
}